fix: resolve alignment issue on list controller buttons

--- a/frontend/components/ListController/ListController.css
+++ b/frontend/components/ListController/ListController.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   justify-content: space-between;
+  justify-content: flex-end;
   background-color: var(--theme-colour-background-shade-3, #DDDDDD);
   font-family: var(--theme-font-family, sans-serif);
   padding: 15px 20px;
